# connectedhomeip

./: BUILD.gn
.github/workflows/: tests.yaml
scripts/: constraints.txt  requirements.txt
src/controller/python/: BUILD.gn  chip-core-setup.cfg  common_setup.cfg
src/controller/python/chip-clusters/: BUILD.gn  setup.cfg
src/controller/python/chip-clusters/chip/: __init__.py
src/controller/python/chip-core/: BUILD.gn  setup.cfg
src/controller/python/chip-repl/: BUILD.gn  setup.cfg
