# Copyright (c) 2022 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[metadata]
name = chip-core
version = 0.0.1
author = CHIP Authors
description = Python-base APIs and tools for CHIP.
url = https://github.com/project-chip/connectedhomeip

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    coloredlogs
    construct
    dacite
    dbus-python
    deprecation
    ipdb
    pygobject
    pyyaml
    rich

[options.package_data]
chip =
    py.typed
    _ChipDeviceCtrl.so